@@ -1,4 +1,6 @@
 Version 1.0.4 (not yet released):
+- Do not use nanosleep() on W32 anymore. Use Sleep() instead.
+  Do not use nanosleep() on DJGPP anymore. Use usleep() instead.
 - Update gettext files to gettext-0.16.
 - Improved the configure check for the OpenSSL libraries. This fixes a build
   failure on Mac OS X. Reported for msmtp by Michael Williams, who also tested
